2009-12-06 Quentin Mathe <quentin.mathe@gmail.com>

	* Source/NSOutlineView.m (-draggingUpdated:): 
	Fixed drop above as a child in the previous row (when this row is an 
	empty parent).
	(-drawDropAboveIndicatorWithDropItem:atRow:childDropIndex:): Fixed the 
	drop above indicator drawing when the level doesn't match the previous 
	row. Done by including an extra row parameter which makes possible to 
	remove the row computation code that appears to partially duplicate 
	-parentRowForRow:atLevel:andReturnChildIndex:.

2009-12-05 Quentin Mathe <quentin.mathe@gmail.com>

	* Source/NSTableView.m (-_startDragOperationWithEvent:): Modified to call 
	-canDragRowsWithIndexes:atPoint: as expected.

2009-12-05 Quentin Mathe <quentin.mathe@gmail.com>

	* Source/NSOutlineView.m (-draggingUpdated): Further simplified.
	Wrote detailed code documentation since the overall behavior is pretty 
	complex.
	Fixed to compute the vertical and horizontal positions correctly when 
	the view is scrolled.
	Fixed out of bounds exception when the pointer moves into the empty 
	area below the rows (was trying to auto-expand the root item).
	Implemented drop on root indicator in addition to drop on row and drop 
	drop above (works the same as Mac OS X).
	(-isExpandable:): Modified to always return NO when the item is nil (as 
	Mac OS X does).
	(-drawDropAboveIndicatorWithDropItem:childDropIndex:, 
	-drawDropOnRootIndicator, -drawDropOnWithDropItem:, 
	-parentRowForRow:atLevel:andReturnChildIndex:): New methods extracted 
	from -draggingUpdated.

2009-11-30 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSOutlineView.m: Improve DnD allowing drop on items as well
	as inside them. Attempt to mimix OSX behavior.  Simplify code.
	Use triangular images similar to OSX appearance.
	Doubtless needs more polishing.

2009-11-29  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSView.m (-dealloc): Fix bug where -dealloc could break
	the key view chain.
