@@ -1,3 +1,8 @@
+2009-12-08 Hans Baier <hansfbaier@googlemail.com>
+	* Source/NSColorWell.m (-mouseDragged:, -mouseDown:): Applied
+	patch from Eric Wasylishen to activate it on click inside the
+	colored rectangle (same behavior as in OS X)
+
 2009-12-06 Quentin Mathe <quentin.mathe@gmail.com>
 
 	* Source/NSOutlineView.m (-draggingUpdated:): 
